minor clean-ups
* simplified remove